TEST_PROGRAMS/VALID/05/leading_zeroes_in_hex.go
/* Leading 0's in hexidecimal. */

package main

var o int = 0x00001
var z int = 0x000

func main() {
	// Do nothing
}
