TEST_PROGRAMS/INVALID/05/escaped_dquote_rune.go
/* Escaped double quote rune. */

package main

var r rune = '\"' // Error: Escaped double quote note allowed as a rune

func main() {
	// Do nothing
}
